# cinnamon-control-center

./: .gitignore  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  cinnamon-control-center.pot  config.h.in  configure  configure.ac  generate_additional_files.py  makepot  meson.build  meson_options.txt
install-scripts/: desktop-file-links.py  meson.build
panels/: Makefile.am  Makefile.in  meson.build
panels/background/: Makefile.am  Makefile.in  bg-colors-source.c  bg-colors-source.h  bg-pictures-source.c  cc-background-panel.c  gdesktop-enums-types.c  gdesktop-enums-types.h  gnome-background-panel.desktop.in.in
panels/bluetooth/: Makefile.am  Makefile.in  bluetooth-properties.desktop.in.in  bluetooth.ui  cc-bluetooth-panel.c  cinnamon-bluetooth-properties.desktop.in.in
panels/color/: Makefile.am  Makefile.in  cc-color-panel.c  cc-color-panel.h  cinnamon-color-panel.desktop  cinnamon-color-panel.desktop.in.in  color-module.c  color.ui  meson.build
panels/common/: Makefile.am  Makefile.in  cc-common-language.c  cc-common-language.h  cc-language-chooser.c  cc-language-chooser.h  csd-device-manager.c  csd-device-manager.h  csd-input-helper.c  gdm-languages.c  gdm-languages.h  list-languages.c  locarchive.h  meson.build
panels/datetime/: Makefile.am  Makefile.in  cc-datetime-panel.c  cc-timezone-map.c  cinnamon-datetime-panel.desktop.in  cinnamon-datetime-panel.desktop.in.in  csd-dtm-interface.xml  date-endian.c  date-endian.h  datetime-module.c  datetime.ui  dtm.c  dtm.h  gnome-datetime-panel.desktop.in.in  meson.build  org.cinnamon.controlcenter.datetime.policy.in  set-timezone.c  test-endianess.c  timedated.c  tz.c
panels/display/: Makefile.am  Makefile.in  TODO  cc-display-arrangement.c  cc-display-config-dbus.c  cc-display-config-manager-dbus.c  cc-display-config.c  cc-display-config.h  cc-display-labeler.c  cc-display-labeler.h  cc-display-panel.c  cc-display-panel.h  cc-display-panel.ui  cc-display-settings.c  cc-display-settings.h  cc-display-settings.ui  cc-rr-labeler.c  cc-rr-labeler.h  cinnamon-display-panel.desktop  cinnamon-display-panel.desktop.in  cinnamon-display-panel.desktop.in.in  display-arrangement.css  display-capplet.ui  display-module.c  display.gresource.xml  foo-marshal.c  foo-marshal.h  gnome-display-panel.desktop.in.in  meson.build  org.cinnamon.control-center.display.gschema.xml  scrollarea.c  scrollarea.h
panels/info/: Makefile.am  Makefile.in  cc-info-panel.c  cinnamon-info-panel.desktop.in.in  gnome-info-panel.desktop.in.in  info-module.c  info.ui
panels/keyboard/: 01-launchers.xml.in  Makefile.am  Makefile.in  cc-keyboard-item.c  cc-keyboard-panel.c  cinnamon-keybindings.pc.in  cinnamon-keyboard-panel.desktop.in.in  gnome-keyboard-panel.desktop.in.in  keyboard-module.c  keyboard-shortcuts.c
panels/mouse/: Makefile.in
panels/network/: Makefile.am  Makefile.in  cc-network-panel.c  cc-network-panel.h  cc-network-resources.c  cc-network-resources.h  cinnamon-network-panel.desktop  cinnamon-network-panel.desktop.in  cinnamon-network-panel.desktop.in.in  gnome-network-panel.desktop.in.in  meson.build  net-device-bond.c  net-device-bond.h  net-device-bridge.c  net-device-ethernet.c  net-device-mobile.c  net-device-simple.c  net-device-team.c  net-device-wifi.c  net-device-wired.c  net-device.c  net-object.c  net-proxy.c  net-virtual-device.c  net-vpn.c  network-dialogs.c  network-ethernet.ui  network-mobile.ui  network-module.c  network-proxy.ui  network-simple.ui  network-vpn.ui  network-wifi.ui  network.gresource.xml  network.ui  panel-cell-renderer-mode.c  panel-cell-renderer-pixbuf.c  panel-cell-renderer-security.c  panel-cell-renderer-separator.c  panel-cell-renderer-signal.c  (+4 more)
panels/online-accounts/: Makefile.am  Makefile.in  cc-online-accounts-panel.c  cc-online-accounts-panel.h  cinnamon-online-accounts-panel.desktop.in.in  cinnamon-online-accounts.desktop  gnome-online-accounts-panel.desktop.in.in  meson.build  online-accounts-module.c  online-accounts.gresource.xml  online-accounts.ui
panels/power/: Makefile.am  Makefile.in  cc-power-panel.c  cc-power-panel.h  cinnamon-power-panel.desktop.in.in  power-module.c  power.ui
panels/printers/: Makefile.am  Makefile.in  cc-printers-panel.c  cinnamon-printers-panel.desktop.in.in  pp-maintenance-command.c  printers-module.c
panels/region/: Makefile.am  Makefile.in  cc-region-panel.c  cc-region-panel.h  cinnamon-region-panel-formats.c  cinnamon-region-panel-formats.h  cinnamon-region-panel-input.c  cinnamon-region-panel-input.h  cinnamon-region-panel-lang.c  cinnamon-region-panel-lang.h  cinnamon-region-panel-system.c  cinnamon-region-panel-system.h  cinnamon-region-panel-xkb.c  cinnamon-region-panel-xkb.h  cinnamon-region-panel-xkblt.c  cinnamon-region-panel-xkbltadd.c  cinnamon-region-panel-xkbot.c  cinnamon-region-panel-xkbpv.c  cinnamon-region-panel.desktop  cinnamon-region-panel.desktop.in.in  cinnamon-region-panel.ui  meson.build  region-module.c  ubuntu-region-panel.desktop.in.in
panels/screen/: Makefile.am  Makefile.in  cc-screen-panel.c  cc-screen-panel.h  cinnamon-screen-panel.desktop.in.in  screen-module.c  screen.ui
panels/sound/: Makefile.am  Makefile.in  applet-main.c  cc-sound-panel.c  cc-sound-panel.h  gvc-applet.c  gvc-applet.h  gvc-balance-bar.c  gvc-balance-bar.h  gvc-channel-bar.c  gvc-channel-bar.h  gvc-channel-map.c  gvc-combo-box.c  gvc-combo-box.h  gvc-level-bar.c  gvc-level-bar.h  (+22 more)
panels/sound-nua/: Makefile.am  cc-sound-panel.c  cc-sound-panel.h  gvc-balance-bar.c  gvc-balance-bar.h  gvc-mixer-dialog.c
shell/: Makefile.am  Makefile.in  cc-editable-entry.c  cc-editable-entry.h  cc-panel.c  cc-panel.h  cc-shell-item-view.c  cc-shell-log.c  cc-shell-log.h  cc-shell-marshal.c  cc-shell-marshal.h  cc-shell-marshal.list  cc-shell-model.c  cc-shell-model.h  cc-shell-nav-bar.c  cc-shell-nav-bar.h  cc-shell.c  cc-shell.h  cinnamon-control-center.c  cinnamon-control-center.desktop.in.in  cinnamon-control-center.h  cinnamoncc.menu.in  control-center.c  gnome-control-center.c  libcinnamon-control-center.pc.in  meson.build  shell.ui
(+623 files in other folders)
